[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/start.gd" type="Script" id=1]

[node name="StartMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 715.0
margin_top = 396.0
margin_right = 885.0
margin_bottom = 504.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 170.0
margin_bottom = 14.0
text = "settlement-game"
align = 1

[node name="SettlementNameEdit" type="LineEdit" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 170.0
margin_bottom = 48.0
custom_constants/minimum_spaces = 40
align = 1
expand_to_text_length = true
placeholder_text = "Settlement Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="VBoxContainer"]
margin_left = 34.0
margin_top = 58.0
margin_right = 134.0
margin_bottom = 78.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 4
text = "Start"

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_left = 34.0
margin_top = 88.0
margin_right = 134.0
margin_bottom = 108.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 4
text = "Exit"
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
